--- a/res/layout/activity_news.xml
+++ b/res/layout/activity_news.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="center_horizontal|left"
-    android:orientation="vertical" >
-
-    <Spinner
-        android:id="@+id/news_spinner_nav"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
+    android:orientation="vertical"
+    tools:context=".NewsActivity" >
     <TextView
         android:id="@+id/news_textView_status"
         android:layout_width="wrap_content"
@@ -24,12 +20,16 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" >
-
-            <TextView
+			  <WebView
+                android:id="@+id/news_webview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            
+           <!--  <TextView
                 android:id="@+id/news_textView_news"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="News Here" />
+                android:text="News Here" /> -->
 
         </LinearLayout>
     </ScrollView>
